// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <div
        className="sc-gZRyEk hhOQTT"
      >
        <input
          className="sc-gbFqDM iQyqYU"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <div
        className="sc-gZRyEk hhOQTT"
      >
        <input
          className="sc-gbFqDM bXyCLL"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM bNFzwd"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <div
        className="sc-gZRyEk hhOQTT"
      >
        <input
          className="sc-gbFqDM kyyLoe"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jjavrh bcqKWo"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <div
        className="sc-gZRyEk hhOQTT"
      >
        <input
          className="sc-gbFqDM jVRJgR"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jjavrh bcqKWo"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM kMXWsj"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jjavrh bcqKWo"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <div
        className="sc-gZRyEk hhOQTT"
      >
        <input
          className="sc-gbFqDM iQyqYU"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <div
        className="sc-gZRyEk hhOQTT"
      >
        <input
          className="sc-gbFqDM bXyCLL"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM bNFzwd"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <div
        className="sc-gZRyEk hhOQTT"
      >
        <input
          className="sc-gbFqDM iQyqYU"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <div
        className="sc-gZRyEk hhOQTT"
      >
        <input
          className="sc-gbFqDM bXyCLL"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM bNFzwd"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <div
        className="sc-gZRyEk hhOQTT"
      >
        <input
          className="sc-gbFqDM iQyqYU"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <div
        className="sc-gZRyEk hhOQTT"
      >
        <input
          className="sc-gbFqDM bXyCLL"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM bNFzwd"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
        dir="rtl"
      >
        medium
      </label>
      <div
        className="sc-gZRyEk hhOQTT"
      >
        <input
          className="sc-gbFqDM iQyqYU"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eLHYIy cvGMEc"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
        dir="rtl"
      >
        large
      </label>
      <div
        className="sc-gZRyEk hhOQTT"
      >
        <input
          className="sc-gbFqDM bXyCLL"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eLHYIy cvGMEc"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM bNFzwd"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-edwNYl epHbuE"
        >
          xlarge
        </label>
        <div
          className="sc-eLHYIy cvGMEc"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk hhOQTT"
      >
        <input
          className="sc-gbFqDM iQyqYU"
          placeholder="medium"
          type="password"
        />
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk hhOQTT"
      >
        <input
          className="sc-gbFqDM bXyCLL"
          placeholder="large"
          type="password"
        />
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM eJgmTo"
          placeholder="xlarge"
          type="password"
        />
        <label
          className="sc-edwNYl ejNdCL"
        />
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <div
        className="sc-gZRyEk hhOQTT"
      >
        <input
          className="sc-gbFqDM JlMJj"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <div
        className="sc-gZRyEk hhOQTT"
      >
        <input
          className="sc-gbFqDM gHMcUc"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk fMtNhl"
      >
        <input
          className="sc-gbFqDM bNFzwd"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
        <div
          className="sc-eLHYIy bLgQbT"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
